<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/travel_layout_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lchrislee.longjourney.TravelActivity"
    tools:deviceIds="wear"
    android:padding="5dp">

    <FrameLayout
        android:id="@+id/travel_layout_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_box="all">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="@string/travel_level" />

        <TextView
            android:id="@+id/travel_text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="20dp"
            android:text="@string/travel_counter_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:text="@string/travel_gold" />

        <TextView
            android:id="@+id/travel_text_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginEnd="12dp"
            android:text="@string/travel_counter_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="26dp"
            android:text="@string/travel_steps" />

        <TextView
            android:id="@+id/travel_text_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/travel_counter_default" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:progress="10"
            android:id="@+id/travel_progress_xp"
            android:max="100"/>

    </FrameLayout>

</android.support.wearable.view.BoxInsetLayout>
