<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.BoxInsetLayout
    android:id="@+id/battle_layout_box"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lchrislee.longjourney.BattleActivity"
    tools:deviceIds="wear"
    android:padding="15dp"
    android:background="@color/blue" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        app:layout_box="all">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/battle_text_monster_name"
            android:gravity="end" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_level"
                android:layout_marginEnd="2dp"/>

            <TextView
                android:id="@+id/battle_text_monster_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/travel_counter_default" />

        </LinearLayout>

        <TextView
            android:id="@+id/battle_text_monster_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/battle_monster_name_default" />

        <ProgressBar
            android:id="@+id/battle_progress_monster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/battle_text_monster_name"
            android:progress="10"
            android:max="100"
            android:secondaryProgress="50"
            android:clickable="false"
            android:focusable="false"
            android:longClickable="false"
            style="?android:attr/progressBarStyleHorizontal" />

        <ImageView
            android:id="@+id/battle_image_monster"
            android:src="@drawable/slime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/battle_progress_monster"
            android:layout_above="@+id/battle_text_player_identifier"
            android:scaleType="fitCenter"/>

        <ImageView
            android:id="@+id/battle_image_player"
            android:src="@drawable/rubber_chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/battle_text_player_identifier"
            android:layout_below="@+id/battle_progress_monster"
            android:scaleType="fitCenter"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/battle_text_player_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/battle_progress_player"
            android:text="@string/battle_player_identifier" />

        <ProgressBar
            android:id="@+id/battle_progress_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:progress="10"
            android:max="100"
            android:secondaryProgress="50"
            android:clickable="false"
            android:focusable="false"
            android:longClickable="false"
            style="?android:attr/progressBarStyleHorizontal" />

    </RelativeLayout>

</android.support.wearable.view.BoxInsetLayout>
